fix: request #31073 Roadmap tooltip title is not readable
Looks like a regression introduced by git #tuleap/stable/fdc0c82f5c5c93a7007823b468977fc1bc110649

* popover arrow has the right color
* title is readable
* no line separation between header and body

--- a/plugins/roadmap/themes/_popover.scss
+++ b/plugins/roadmap/themes/_popover.scss
@@ -29,7 +29,7 @@
         }
     }
 
-    > .roadmap-gantt-task-popover-arrow {
+    > .roadmap-gantt-task-popover-arrow::after {
         background: var(--tlp-dark-color-darker-20);
     }
 
@@ -51,7 +51,7 @@
     &.tlp-popover[data-popover-placement="right"],
     &.tlp-popover[data-popover-placement="left-end"],
     &.tlp-popover[data-popover-placement="right-end"] {
-        > .roadmap-gantt-task-popover-arrow {
+        > .roadmap-gantt-task-popover-arrow::after {
             background: var(--tlp-dark-color);
         }
     }
@@ -61,7 +61,7 @@
             transform: translateY(0);
         }
 
-        > .roadmap-gantt-task-popover-arrow {
+        > .roadmap-gantt-task-popover-arrow::after {
             background: var(--tlp-dark-color);
         }
     }
@@ -69,6 +69,7 @@
 
 .roadmap-gantt-task-popover-header {
     border-top: 4px solid transparent;
+    border-bottom: 1px solid var(--tlp-dark-color-darker-20);
     background: var(--tlp-dark-color-darker-20);
 
     @each $color-name, $colors in tlp-swatch-colors.$color-map {
@@ -85,6 +86,7 @@
 .roadmap-gantt-task-popover-title {
     display: flex;
     flex-direction: column;
+    color: var(--tlp-white-color);
 }
 
 .roadmap-gantt-task-popover-xref {
